# ascii2binary

./: ChangeLog  GetWord.c  MachineInfo.c  Makefile.am  Makefile.in  NEWS  README  a2b_endian.h  ascii2binary.1  ascii2binary.c  binary2ascii.1  binary2ascii.c  binfmt.c  config.h.in  configure  configure.ac  endian.c  exitcodes.c  exitcodes.h
